--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,8 +34,8 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
-$base-color-hover: darken($base-color, 10%);
+$base-color: #dee775;
+$base-color-hover: darken($base-color, 50%);
 
 // Define background colors
 $background: #fff;
@@ -45,7 +45,7 @@ $background-alt: #f2f2f5;
 $border: #dcd9d9;
 
 // Define text colors
-$heading: #374054;
+$heading: #2d4045;
 $text: #74808a;
 
 /*
